--- a/client/src/components/buttons/Buttons.css
+++ b/client/src/components/buttons/Buttons.css
@@ -8,6 +8,7 @@
   flex-shrink: 0;
   font-size: 16px;
   font-weight: 500;
+  font-family: 'ONE-Mobile-POP';
   height: 3rem;
   padding: 0 1.6rem;
   text-align: center;
