--- a/client/src/pages/CafeList.css
+++ b/client/src/pages/CafeList.css
@@ -13,26 +13,31 @@ ul.pagination li {
   display: inline-block;
   width: 30px;
   height: 30px;
-  border: 1px solid #e2e2e2;
+  border: 1px solid #673fd7;
+  border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
   cursor: pointer;
   margin: 1px;
+  background-color: #e2e2e2;
 }
 
 ul.pagination li:first-child {
   border-radius: 5px 0 0 5px;
+  background-color: #e2e2e2;
+  font-weight: bold;
 }
 
 ul.pagination li:last-child {
   border-radius: 0 5px 5px 0;
+  font-weight: bold;
 }
 
 ul.pagination li a {
   text-decoration: none;
-  color: #337ab7;
+  color: #673fd7;
   font-size: 1rem;
 }
 
@@ -41,16 +46,18 @@ ul.pagination li.active a {
 }
 
 ul.pagination li.active {
-  background-color: #337ab7;
+  background-color:#5643cc;
 }
 
 ul.pagination li a:hover,
 ul.pagination li a.active {
-  color: blue;
+  color: #5643cc;
+  font-weight: bold;
 }
 
 .page-selection {
   width: 48px;
   height: 30px;
-  color: #337ab7;
+  color:#5643cc;
+  font-weight: bold;
 }
